Fixed no vertical gap between chips bug

--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -54,20 +54,22 @@
 .project-stack {
   margin-bottom: 1rem;
 }
+.project-stack,
+.about-stack {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+}
 .project-stack span,
 .about-stack span {
   display: inline-block;
   background: var(--clr-grey-9);
   color: var(--clr-grey-5);
-  margin-right: 0.5rem;
   padding: 0.25rem 0.5rem;
   border-radius: var(--radius);
   text-transform: uppercase;
   letter-spacing: 0.125rem;
   font-size: 0.85rem;
-}
-.about-stack span {
-  margin-top: 0.5rem;
 }
 .project-links a {
   color: var(--clr-primary-5);
